# tlsnotary-android-native

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/macmac/rust_jni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/macmac/rust_jni/: MainActivity.kt  RustLib.kt
app/src/main/java/com/macmac/rust_jni/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/rust/rust-native/: .gitignore  Cargo.toml
app/src/main/rust/rust-native/src/: lib.rs  main.rs  tlsnotary.rs
app/src/test/java/com/macmac/rust_jni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
