[package]
name = "rust-native"
version = "0.1.0"
edition = "2021"


[dependencies]
jni = "0.21.1"
notary-client =  { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-common =  { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-core =  { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-prover =  { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-verifier =  { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-formats =  { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }


bincode = "1.3"
chrono = "0.4"
dotenv = "*"
futures = "0.3"
http-body-util = "0.1"
hex = "0.4"
hyper = { version = "1.1" , features = ["client", "http1"] }
hyper-util = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }
serde_json = "1.0"
tokio = { version = "1.38", features = [  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
openssl-sys = {version = "0.9.103", features = ["vendored"]}

[lib]
crate_type = ["rlib", "dylib"]

